# Rexon

./: .air.toml  .env  .gitignore  .resource.syso  README.md  data.rexon  go.mod  go.sum  goversioninfo.exe.manifest  index.ts  main.go  nbt.go  package-lock.json  package.json  playit.go  pnpm-lock.yaml  postman.json  resource.syso  rexon_test.go  tygo.yaml  versioninfo.json
ancii/: ancii.go
config/: config.go
filemanager/: archiver.go  manager.go
filemanager/ftp/: logger.go  server.go
handlers/: handlers.go
java/: java.go  utils.go
mc/: main.go  propertise.go  types.go  utils.go
playit/: installer.go  playit.go  playit_test.go
playit_control/: Cargo.toml
playit_control/include/: playitctl.h
playit_control/src/: lib.rs
process/: manager.go
server/: eula.txt  ops.json  server.properties  usercache.json  whitelist.json
server/world/: level.dat_old
server/world/region/: r.-1.0.mca  r.0.0.mca
setup/: envcreation.go  setup.go
software/: software.go
sql/: sql.go
types/: types.go
utils/: randstring.go  utils.go
web/: index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
web/src/: App.css  main.tsx
web/src/FileManager/: index.js  style.css
web/src/actions/: playit.ts
web/src/components/: Passcode-Input.tsx  Router.tsx  app-sidebar.tsx  file-previewer.tsx  sidebar-toggle.tsx  terminal.tsx
web/src/lib/: Passcode.tsx  command.ts  http.ts  registryResolver.ts
web/src/pages/: Console.tsx  Playit.tsx  Software.tsx  filemanager.tsx
web/types/: index.ts
web/types/handlers/: index.ts
web/types/mc/: index.ts
(+2 files in other folders)
