[package]
name = "playit_control"
version = "0.16.5"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Use the local API client package (actual package name in ../api_client/Cargo.toml)
#playit_api_client = { path = "../api_client", package = "playit-api-client" }
#playit_cli = { path = "../agent_cli", package = "playit-cli" }
#playit_agent_core = { path = "../agent_core", package = "playit-agent-core"}
#playit_agent_proto = { path = "../agent_proto", package = "playit-agent-proto"}


tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
playit-agent-core = "0.20.1"
playit-agent-proto = "1.3.0"
playit-api-client = "0.1.2"
